--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ python-dotenv = "^1.0.0"
 requests = "^2.28.0"
 anthropic = "^0.3.0"
 langchain = "^0.0.267"
+pytube = "^12.1.0"
+youtube-transcript-api = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.3.1"
