--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,6 @@ name = "pia-discord-bot"
 version = "0.1.0"
 description = "A Discord bot that monitors channels for links, creates threads, and summarizes content"
 authors = ["Your Name <your.email@example.com>"]
-
 [tool.poetry.dependencies]
 python = "^3.8"
 discord-py = "^2.3.1"
@@ -12,8 +11,8 @@ python-dotenv = "^1.0.0"
 requests = "^2.28.0"
 anthropic = "^0.3.0"
 langchain = "^0.0.267"
-pytube = "^12.1.0"
-youtube-transcript-api = "^0.6.0"
+pytubefix = "^4.0.0"  # Using pytubefix instead of pytube
+youtube-transcript-api = "^1.0.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.3.1"
