--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ requests>=2.28.0
 anthropic>=0.3.0
 langchain>=0.0.267
 pytest>=7.3.1
-pytube>=12.1.0
-youtube_transcript_api>=0.6.0
+pytubefix>=4.0.0
+youtube_transcript_api>=1.0.3
