--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ anthropic = "^0.3.0"
 langchain = "^0.0.267"
 pytubefix = "^4.0.0"  # Using pytubefix instead of pytube
 youtube-transcript-api = "^1.0.3"
+anthropic = "^0.49.0"
+openai = "^1.74.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.3.1"
