TMP duplicate detection on url and local cache
Need to add duplicate detection on ID rather than raw URL

--- a/pia-discord-bot_config_template.json
+++ b/pia-discord-bot_config_template.json
@@ -32,5 +32,8 @@
     "logging": {
         "level": "INFO",
         "file": "pia-discord-bot.log"
+    },
+    "cache": {
+      "file": "data/summary_cache.json"
     }
 }
