--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ pytubefix = "^4.0.0"  # Using pytubefix instead of pytube
 youtube-transcript-api = { version = "^1.0.3", python = ">=3.8,<3.14" }
 anthropic = "^0.49.0"
 openai = "^1.74.0"
+codaio = { version = "^0.6.12", python = ">=3.9,<4.0" }
+
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
