--- a/pia-discord-bot_config_template.json
+++ b/pia-discord-bot_config_template.json
@@ -13,7 +13,10 @@
             "youtu.be"
         ],
         "youtube": {
-            "api_key": "YOUR_YOUTUBE_API_KEY"
+            "api_key": "YOUR_YOUTUBE_API_KEY",
+            "proxy_enabled": false,
+            "proxy_http_url": "http://localhost:8000",
+            "proxy_https_url": "https://localhost:8000"
         }
     },
     "summarization": {
