--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ discord.py>=2.3.1
 pydantic>=2.0.0
 python-dotenv>=1.0.0
 requests>=2.28.0
-youtube_transcript_api>=1.0.3
+# Temporary fix for transcript API
+# youtube_transcript_api>=1.0.3
+git+https://github.com/danielxceron/youtube-transcript.git@fix/captions-parsing-fallback-issue-45#egg=youtube-transcript-api
 anthropic>=0.49.0
 openai>=1.74.0
 codaio>=0.6.12
+
